# pg-copybara-rs

./: Cargo.toml  README.md  docker-compose.yml  run_test.sh
init/dest/: 01-init.sql
init/source/: 01-init.sql
src/: main.rs
