[package]
name = "pg-copybara-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Blazingly fast copy data from postgres to postgres"

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
bytes = "1.10.1"
clap = { version = "4.5.31", features = ["derive"] }
deadpool-postgres = "0.14.1"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
postgres-types = { version = "0.2.9", features = [
  "derive",
  "with-serde_json-1",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.56"
tokio = { version = "1.44.0", features = [
  "full",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-postgres = { version = "0.7.13", features = [
  "with-uuid-1",
  "with-time-0_3",
  "with-serde_json-1",
] }